Update Fllapy Bird

--- a/index.html
+++ b/index.html
@@ -101,6 +101,9 @@
       color: #666;
       font-size: 0.9rem;
     }
+    a h2 {
+      color: white;
+    }
   </style>
 </head>
 <body>
@@ -132,7 +135,7 @@
     <h1>🎮 Games on GitHub - Play Now</h1>
     <div class="game-container">
         <div>
-            <h2>🐤 Flappy Bird Deluxe</h2>
+            <a href="flappy/index.html"><h2>🐤 Flappy Bird Deluxe</h2></a>
             <iframe src="flappy/index.html" title="Flappy Bird"></iframe>
         </div>
         <div>
